# bigint-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_bigint.cpp  bench_boost.cpp  bench_comparison.cpp  bench_gmp.cpp
cmake/: bigint-config.cmake.in
include/bigint/: BigInt.hpp  Constants.hpp
src/: BarrettContext.hpp  BigInt.cpp  MontgomeryContext.cpp  MontgomeryContext.hpp
tests/: CMakeLists.txt  test_bigint_arithmetic.cpp  test_bigint_basic.cpp  test_bigint_bitwise.cpp  test_bigint_properties.cpp
